--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.8",
+    "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -23,7 +23,8 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "bootstrap": "^4.0.0",
+    "angular2-jwt": "^0.2.3",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
